# babi

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  SCREENS.md  azure-pipelines.yml  babi.py  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
babi/: __main__.py  _types.py  buf.py  cached_property.py  color.py  color_kd.py  color_manager.py  dim.py  fdict.py  file.py  highlight.py  history.py  horizontal_scrolling.py  linting.py  list_spy.py  main.py  margin.py  perf.py  proc.py  prompt.py  reg.py  screen.py  status.py  textmate_demo.py  theme.py  user_data.py
babi/hl/: bracket_match.py  interface.py  lint_errors.py  replace.py  secrets.py  selection.py  syntax.py  trailing_whitespace.py
babi/linters/: flake8.py  pre_commit.py
babi/resources/: default-theme.json  default_theme.py
licenses/: microsoft_vscode_LICENSE.txt
testing/: debug-babi  runner.py
testing/vsc_test/: package.json  vsc.js
tests/: babi_test.py  buf_test.py  color_kd_test.py  color_manager_test.py  color_test.py  command_mode_test.py  conftest.py  current_position_test.py  cut_uncut_test.py  fdict_test.py  file_test.py  get_files_test.py  get_lines_test.py  go_to_line_test.py  highlight_test.py  indent_test.py  linting_test.py  list_spy_test.py  main_test.py  movement_test.py  multiple_files_test.py  perf_log_test.py  proc_test.py  reg_test.py  replace_test.py  resize_test.py  save_test.py  search_test.py  sort_test.py  status_test.py  suspend_test.py  text_editing_test.py  textmate_demo_test.py  theme_test.py  undo_redo_test.py  user_data_test.py
tests/features/: bracket_match_test.py  command_mode_test.py  comment_test.py  conftest.py  current_position_test.py  cut_uncut_test.py  expandtabs_test.py  go_to_line_test.py  indent_test.py  initial_position_test.py  key_debug_test.py  linting_test.py  movement_test.py  multiple_files_test.py  open_test.py  perf_log_test.py  quit_all_test.py  reload_test.py  replace_test.py  resize_test.py  retheme_test.py  save_test.py  search_test.py  sort_test.py  status_test.py  stdin_test.py  suspend_test.py  syntax_highlight_test.py  tabsize_test.py  text_editing_test.py  trailing_whitespace_test.py  undo_redo_test.py
tests/hl/: bracket_match_test.py  rainbow_test.py  syntax_test.py
tests/linters/: flake8_test.py  pre_commit_test.py
