[metadata]
name = babi
version = 0.0.10
description = a text editor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/babi
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    babi-grammars
    identify
    onigurumacffi>=0.0.10
    importlib_metadata>=1;python_version<"3.8"
    windows-curses;sys_platform=="win32"
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    babi = babi.main:main
    babi-textmate-demo = babi.textmate_demo:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
parallel = true

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
